--- a/src/plan.html
+++ b/src/plan.html
@@ -709,7 +709,7 @@
         </section>
 
         <!-- View Floor Plans by Tower & Configuration -->
-        <section
+        <section id="planunitplan"
             class="w-full h-auto px-[16.8px] pt-[80px] pb-[40px] md:py-[80px] relative flex flex-col gap-[17.89px] lg:gap-[48px]" id="planSection">
             <!-- flow buttons -->
             <div
@@ -1504,7 +1504,7 @@
         </section>
 
         <!-- Master Site Plan at a Glance -->
-        <section class="w-full h-auto flex flex-col gap-[26.02px]">
+        <section id="plansiteplan" class="w-full h-auto flex flex-col gap-[26.02px]">
             <div
                 class="w-full px-[33.05px] md:px-0 bg-cover bg-center h-[238.05px] flex flex-col items-center justify-center bg-[url('./mediaFiles/Plan/Plan/bg-diamondShape.svg')]">
                 <h3
@@ -1575,7 +1575,7 @@
         </section>
 
         <!-- Explore the Project’s Tower Layout -->
-        <section class="w-full h-max py-[50px]">
+        <section id="plantowerplan" class="w-full h-max py-[50px]">
             <div
                 class="relative w-full h-auto bg-cover bg-center bg-no-repeat bg-[url('./mediaFiles/Plan/Plan/large_bg_diamond.svg')] py-[67px] flex flex-col items-center justify-center gap-[20px] lg:gap-[78px]">
                 <div class="w-max m-auto">
@@ -1740,7 +1740,7 @@
         </section>
 
         <!-- FAQ -->
-        <section class="w-full h-max sm:py-[50px] lg:py-[80px] px-[16px] md:px-[20px] lg:px-[99px] bg-[#F9F9F9]">
+        <section id="planFAQ" class="w-full h-max sm:py-[50px] lg:py-[80px] px-[16px] md:px-[20px] lg:px-[99px] bg-[#F9F9F9]">
             <div class="w-full max-h-[565px] flex flex-col gap-[24.52px] md:gap-[48px]">
                 <div class="flex flex-col items-start">
                     <h2
