--- a/src/index.html
+++ b/src/index.html
@@ -1243,8 +1243,8 @@
                 </div>
                 <div class="w-full h-full  xl:h-lvh relative">
                     <div class="swiper carftedBanner">
-                        <div class="swiper-wrapper h-full">
-                            <div class="swiper-slide relative !h-auto">
+                        <div class="swiper-wrapper h-full ">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1253,8 +1253,7 @@
                                             class="w-full h-auto lg:h-full  object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted by Hafeez Contractor</h3>
@@ -1271,7 +1270,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1280,8 +1279,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1297,7 +1295,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1306,8 +1304,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1323,7 +1320,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1332,8 +1329,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Grand 1 Lakh Sq.ft Clubhouse</h3>
@@ -1348,7 +1344,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1357,8 +1353,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Prime Location – IT City Mohali</h3>
@@ -1373,7 +1368,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1382,8 +1377,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 bg-no-repeat bg-center bg-cover sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]"
-                                        style="background-image: var(--paper-crashes-BG);">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[30px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted for those who live above the ordinary</h3>
