--- a/src/index.html
+++ b/src/index.html
@@ -1225,7 +1225,7 @@
         </section>
 
         <!-- Crafted For the Top 1% -->
-        <section class="w-full h-lvh xl:h-max">
+        <section class="w-full h-max">
             <div class="flex flex-col w-full h-full">
                 <div class="w-full h-max px-[16px] bg-cover bg-center bg-no-repeat pt-[10px] md:pt-[85.63px] pb-[21.69px] md:pb-[61.37px]"
                     style="background-image: var(--Crafted-for-Top-bg);">
@@ -1253,8 +1253,8 @@
                                             class="w-full h-auto lg:h-full  object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
-                                        <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                        <div class="w-full m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted by Hafeez Contractor</h3>
                                             <p class="font-jost font-normal text-[17px] leading-[150%] text-[#003253]">
@@ -1279,7 +1279,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1304,7 +1304,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1329,7 +1329,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Grand 1 Lakh Sq.ft Clubhouse</h3>
@@ -1353,7 +1353,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Prime Location – IT City Mohali</h3>
@@ -1377,7 +1377,7 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 sm:px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[30px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted for those who live above the ordinary</h3>
