--- a/src/index.html
+++ b/src/index.html
@@ -1465,7 +1465,7 @@
         <section class="w-full h-max">
             <div id="products"
                 class="max-w-[1243.63px] p-[inherit] xl:px-0 h-max m-auto pt-[40px] lg:pt-[106.85px] flex flex-col gap-[15.67px]">
-                <div class="flex lg:flex-row flex-col gap-y-[24px] px-[16px] lg:px-0 items-center">
+                <div class="flex lg:flex-row flex-col gap-y-[24px] px-[16px] lg:px-0 items-center justify-between">
                     <!-- Left Content -->
                     <div class="flex flex-col gap-[9px] grow max-w-[668px] ">
                         <h3
