--- a/src/index.html
+++ b/src/index.html
@@ -1227,9 +1227,13 @@
         <!-- Crafted For the Top 1% -->
         <section class="w-full h-max">
             <div class="flex flex-col w-full h-full">
-                <div class="w-full h-max px-[16px] bg-cover bg-center bg-no-repeat pt-[10px] md:pt-[85.63px] pb-[21.69px] md:pb-[61.37px]"
+                <div class="relative w-full h-max px-[16px] bg-cover sm:bg-[length:200%_500%] bg-top bg-no-repeat pt-[10px] pb-[21.69px] md:py-[50px]"
                     style="background-image: var(--Crafted-for-Top-bg);">
-                    <div class="m-auto max-w-[1006px] flex flex-col items-center md:gap-[24px]">
+                    <!-- Dark shade overlay -->
+                    <div class="absolute inset-0 bg-gradient-to-r from-black/60 via-transparent to-black/60"></div>
+
+                    <!-- Your content here -->
+                    <div class="relative z-10 m-auto max-w-[1006px] flex flex-col items-center md:gap-[24px]">
                         <h3
                             class="bg-gradient-to-b from-[#FFC267] to-[#99753E] bg-clip-text text-transparent font-jost font-semibold md:font-medium text-[24px] md:text-[40px] leading-[60px]">
                             Crafted for the Top 1%
@@ -1244,7 +1248,8 @@
                 <div class="w-full h-full  xl:h-lvh relative">
                     <div class="swiper carftedBanner">
                         <div class="swiper-wrapper h-full ">
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1253,7 +1258,8 @@
                                             class="w-full h-auto lg:h-full  object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-full m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted by Hafeez Contractor</h3>
@@ -1270,7 +1276,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1279,7 +1286,8 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1295,7 +1303,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1304,7 +1313,8 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Interiors by Zafar Choudhary</h3>
@@ -1320,7 +1330,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1329,7 +1340,8 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Grand 1 Lakh Sq.ft Clubhouse</h3>
@@ -1344,7 +1356,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1353,7 +1366,8 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[16px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Prime Location – IT City Mohali</h3>
@@ -1368,7 +1382,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover" style="background-image: var(--paper-crashes-BG);">
+                            <div class="swiper-slide relative !h-auto bg-no-repeat bg-center bg-cover"
+                                style="background-image: var(--paper-crashes-BG);">
                                 <div class="w-full h-full grid grid-cols-1 lg:grid-cols-[65%_auto]">
                                     <!-- image -->
                                     <div class="lg:grow lg:flex-[2.7]">
@@ -1377,7 +1392,8 @@
                                             class="w-full h-auto lg:h-full object-contain lg:object-cover">
                                     </div>
                                     <!-- content -->
-                                    <div class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
+                                    <div
+                                        class="relative grow lg:flex-[1.3]  w-full h-full z-10 px-[27.62px] pb-[71.81px] pt-[21.05px] lg:py-[123.09px]">
                                         <div class="w-[329.12px] m-auto sm:m-0 h-full flex flex-col gap-[30px]">
                                             <h3 class="font-jost font-medium text-[25px] leading-[140%] text-[#003253]">
                                                 Crafted for those who live above the ordinary</h3>
@@ -2978,11 +2994,12 @@
                         </div>
                     </div>
                     <div class="w-full bg-[#FFFFFF1C] border border-[#FFFFFF12] backdrop-blur-[15.6px] py-5 px-[16px]">
-                        <div class="max-w-[1240px] m-auto w-full  gap-y-[12px] grid grid-cols-1 lg:grid-cols-2 items-center"
+                        <div class="max-w-[1240px] m-auto w-full  gap-y-[12px] grid grid-cols-1 lg:grid-cols-2 items-center justify-center"
                             style="column-gap: 100px;">
-                            <span class="font-jost font-medium text-[16px] md:text-[23px] text-white">Prefer
+                            <span
+                                class="text-center sm:text-start font-jost font-medium text-[16px] md:text-[23px] text-white">Prefer
                                 to call? We're just a ring away!</span>
-                            <div class="flex items-center gap-[17.18px]">
+                            <div class="flex items-center justify-center sm:justify-start gap-[17.18px]">
                                 <span
                                     class="text-white text-[19px]  font-jost font-medium tracking-[0%] hidden lg:block">Call
                                     us:</span>
