--- a/src/index.html
+++ b/src/index.html
@@ -1113,10 +1113,10 @@
 
         <!-- The Pride of MOHALI -->
         <section class="w-full h-max">
-            <div class="w-full h-[800px] bg-cover bg-no-repeat bg-center relative px-[17px] pb-[22px] flex flex-col gap-y-[10px] justify-end"
+            <div class="w-full h-lvh bg-cover md:bg-[length:100%_100%] bg-no-repeat bg-center relative px-[17px] pb-[50px] md:pb-[22px] flex flex-col gap-y-[10px] justify-end"
                 style="background-image: var(--The-Pride-Mohali-bg);">
                 <div
-                    class=" w-max  md:absolute bottom-[94.54px] md:left-[30px] xl:left-[99.9px] flex flex-col items-start gap-[5px]">
+                    class=" w-max  md:absolute bottom-[65.33px] md:left-[30px] xl:left-[99.9px] flex flex-col items-start gap-[5px]">
                     <span
                         class="font-jost font-medium text-[34.65px] leading-[51.97px] md:text-[40px] md:leading-[60px] text-white">The
                         Pride of </span>
@@ -3032,23 +3032,28 @@
             </iframe>
         </section>
     </main>
-    <footer class="w-full h-max pt-[24px] flex flex-col gap-[15.16px] bg-cover bg-center relative"
+    <footer class="w-full h-max pt-[0px] sm:pt-[24px] flex flex-col sm:gap-[15.16px] bg-cover bg-center relative"
         style="background-image:var(--Crafted-for-Top-bg)">
-        <div class="relative w-full h-auto flex items-center justify-center">
-            <div class="absolute w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-                <p class="font-jost font-medium text-[47px] lg:text-[124px] xl:text-[143px] leading-[100%] text-center text-transparent uppercase"
-                    style="-webkit-text-stroke: 2px #DADADA1A;">
-                    Let’s Connect
-                </p>
+        <div
+            class="w-full h-max m-auto flex flex-col items-center justify-center pt-[24px] pb-[15.16px] sm:pt-[0px] bg-[url('./mediaFiles/footer--mb-bg.svg')] sm:bg-none bg-cover bg-no-repeat">
+            <div class="relative w-full h-auto flex items-center justify-center">
+                <div class="absolute w-full h-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 flex items-center justify-center px-[10px] md:px-[50px]">
+                    <img src="./mediaFiles/Let’s Connect.svg" alt="Let’s connect svg" class="object-contain h-full block md:hidden"/>
+                    <img src="./mediaFiles/Lets-Connect-desktop.svg" alt="Let’s connect svg" class="object-contain h-full md:block hidden"/>
+                </div>
+                <h3
+                    class="font-jost font-medium text-[28px] lg:text-[48px] tracking-[0px] leading-[73px] py-[13px] uppercase text-white text-center">
+                    Let’s Connect</h3>
             </div>
-            <h3
-                class="font-jost font-medium text-[28px] lg:text-[48px] tracking-[0px] leading-[73px] py-[13px] uppercase text-white text-center">
-                Let’s Connect</h3>
+            <div class="block sm:hidden w-auto h-max m-auto flex flex-col items-center justify-center">
+                <img src="./mediaFiles/Home page/Counter number/Footer/companies_logo.png" alt="Companies Logo"
+                    class="w-[310px] lg:w-[540px] m-auto">
+            </div>
         </div>
 
-        <div class="w-auto h-max m-auto flex flex-col items-center justify-center gap-[15.16px]">
+        <div class="w-auto h-max m-auto flex flex-col items-center justify-center sm:gap-[15.16px]">
             <img src="./mediaFiles/Home page/Counter number/Footer/companies_logo.png" alt="Companies Logo"
-                class="w-[310px] lg:w-[540px] m-auto">
+                class="w-[310px] lg:w-[540px] m-auto hidden sm:block">
             <!-- Mobile Contact-->
             <div class="block sm:hidden bg-white w-full h-auto px-[7.5px] py-[27px]">
                 <div class="flex flex-col  items-center justify-center gap-[16.71px] divide-x-[2px] divide-[#E4E4E480]">
@@ -3121,7 +3126,8 @@
             </div>
 
             <!-- MObile menu -->
-            <div class="block sm:hidden w-full">
+            <div
+                class="block sm:hidden w-full pt-[15.18px] bg-[url('./mediaFiles/footer-menu-bg.svg')] sm:bg-none bg-cover bg-no-repeat">
                 <div class="w-full h-auto px-[15px] py-[13.08px] flex flex-col gap-[8px]">
                     <div class="flex justify-between items-center cursor-pointer border-b border-[#60606080] py-[6px]">
                         <h3 class="font-jost font-semibold text-[16px] tracking-[2px] text-white leading-[25.2px]">
